[gd_scene load_steps=5 format=2]

[ext_resource path="res://UI/Menu.gd" type="Script" id=1]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Fonts/Naughty Cartoons.ttf"

[sub_resource type="DynamicFont" id=2]
size = 35
outline_color = Color( 0.0117647, 0.0117647, 0.0117647, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 35
outline_color = Color( 0.0666667, 0.0666667, 0.0666667, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[node name="Menu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ContainerUI" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 269.0
margin_top = 100.0
margin_right = -231.0
margin_bottom = -100.0
rect_min_size = Vector2( 524, 400 )
size_flags_vertical = 3

[node name="NewGame" type="VBoxContainer" parent="ContainerUI"]
margin_right = 524.0
margin_bottom = 400.0
size_flags_horizontal = 3
alignment = 1

[node name="New Game" type="Button" parent="ContainerUI/NewGame"]
margin_top = 123.0
margin_right = 524.0
margin_bottom = 198.0
size_flags_horizontal = 3
size_flags_vertical = 0
custom_colors/font_color = Color( 0.0431373, 0.0470588, 0.0470588, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.443137, 0.592157, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_fonts/font = SubResource( 2 )
text = "New Game"
flat = true

[node name="Credits" type="Button" parent="ContainerUI/NewGame"]
margin_top = 202.0
margin_right = 524.0
margin_bottom = 277.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0.211765, 0.443137, 0.592157, 1 )
custom_colors/font_color_pressed = Color( 0.921569, 0.921569, 0.921569, 1 )
custom_fonts/font = SubResource( 3 )
text = "Credits"
flat = true

[connection signal="pressed" from="ContainerUI/NewGame/New Game" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="ContainerUI/NewGame/Credits" to="." method="_on_Credits_pressed"]
